Alpha 1: 2011-05-31, the code used for HBM poster. The initial graph for MST has edges between special vertexes only and edge weights are number of least hops between special vertexes. 

Alpha 2: 2011-07-17, a version slightly modified from Alpha 1. Nickname preHBM. 

Alpha 2.5: 2011-07-31, a version that uses "new" strategy to span MST that the original mesh is downsampled, MST spans over special vertexes and non-special vertexes, and edge weights are average curvature of two vertexes. Nickname postHBM.

Alpha 2.6: 2011-09-29 A version with MST pruning revised from Alpha 2.5. Has a small bug that 0-value rings are considered as special vertexes. 

Alpha 2.7: 2011-10-04 Fixed bugs in Alpha 2.6. 

Alpha 2.8: 2011-10-08 Excluding 0-ring from initial graph of building MST. 

Alpha 3: 2011-10-26 Reorganized the structure of files and locations of functions. Also, the program now takes in both curvature and convexity/depth maps as inputs to threshold the surface by curvature and extract fundi on convexity/depth map. Drop support for Gang Li style Stricts and Candidates extraction. Used in grant renewal.

Alpha 3.1: 2011-11-24 Last stable version to take FreeSurfer output only

Alpha 4.0: 2011-01-10 First stable version compatible with both FreeSurfer files and VTK files containing Joachim's depth map. 

Alpha 4.1: 2011-01-21 Fixed a few minor bugs in version 4.0.

Alpha 4.2: to be released on 2011-01-30 This version will greatly reduce memory cost and hopefully speed up